HelloUltraviolet/Fixtures/RejectedSource/Statements/AssignmentProvenanceEscape/Expected.uv
//! Expected diagnostic metadata for the AssignmentProvenanceEscape rejected-source specimen.

expectedDiagnostic("E-MEM-3020", "req.18.AssignmentProvenanceEscapeFailures")
